@@ -1,3 +1,8 @@
+2006-02-24  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c: (gsearchtool_setup_gconf_notifications): cleanup
+	previous patch.
+	
 2006-02-24  Emmanuele Bassi  <ebassi@gmail.com>
 
 	* gsearchtool.c: (): handle case when nautilus preferences are not
